fix: overflow x axis

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -36,6 +36,7 @@ body.no-scroll {
 
 .container {
   margin-bottom: 128px;
+  overflow: hidden;
 }
 
 .container,
@@ -77,7 +78,7 @@ h2 {
 .head-translate-container {
   position: relative;
   left: -10%;
-  width: 95vw;
+  width: 100vw;
   overflow: hidden;
 }
 
