--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -14,6 +14,10 @@
 }
 
 @media screen and (min-width: 920px) {
+  .container {
+    overflow: visible;
+  }
+
   .container,
   header,
   footer {
